--- a/index.ipynb
+++ b/index.ipynb
@@ -49,7 +49,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -82,7 +82,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -153,7 +153,7 @@
        "2  18.0      0.178571  0.651205       1       0       0"
       ]
      },
-     "execution_count": 2,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -165,17 +165,40 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 6,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Collecting statsmodels\n",
+      "\u001b[?25l  Downloading https://files.pythonhosted.org/packages/85/d1/69ee7e757f657e7f527cbf500ec2d295396e5bcec873cf4eb68962c41024/statsmodels-0.9.0-cp36-cp36m-manylinux1_x86_64.whl (7.4MB)\n",
+      "\u001b[K    100% |████████████████████████████████| 7.4MB 1.7MB/s eta 0:00:01\n",
+      "\u001b[?25hRequirement already satisfied: pandas in /opt/conda/envs/learn-env/lib/python3.6/site-packages (from statsmodels) (0.23.4)\n",
+      "Collecting patsy (from statsmodels)\n",
+      "\u001b[?25l  Downloading https://files.pythonhosted.org/packages/ea/0c/5f61f1a3d4385d6bf83b83ea495068857ff8dfb89e74824c6e9eb63286d8/patsy-0.5.1-py2.py3-none-any.whl (231kB)\n",
+      "\u001b[K    100% |████████████████████████████████| 235kB 32.6MB/s ta 0:00:01\n",
+      "\u001b[?25hRequirement already satisfied: python-dateutil>=2.5.0 in /opt/conda/envs/learn-env/lib/python3.6/site-packages (from pandas->statsmodels) (2.7.3)\n",
+      "Requirement already satisfied: pytz>=2011k in /opt/conda/envs/learn-env/lib/python3.6/site-packages (from pandas->statsmodels) (2018.5)\n",
+      "Requirement already satisfied: numpy>=1.9.0 in /opt/conda/envs/learn-env/lib/python3.6/site-packages (from pandas->statsmodels) (1.15.0)\n",
+      "Requirement already satisfied: six in /opt/conda/envs/learn-env/lib/python3.6/site-packages (from patsy->statsmodels) (1.11.0)\n",
+      "Installing collected packages: patsy, statsmodels\n",
+      "Successfully installed patsy-0.5.1 statsmodels-0.9.0\n",
+      "\u001b[33mYou are using pip version 10.0.1, however version 18.1 is available.\n",
+      "You should consider upgrading via the 'pip install --upgrade pip' command.\u001b[0m\n"
+     ]
+    }
+   ],
    "source": [
-    "#import statsmodels.api as sm\n",
+    "!pip install statsmodels\n",
+    "import statsmodels.api as sm\n",
     "from statsmodels.formula.api import ols"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -188,7 +211,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -206,10 +229,10 @@
        "  <th>Method:</th>             <td>Least Squares</td>  <th>  F-statistic:       </th> <td>   256.7</td> \n",
        "</tr>\n",
        "<tr>\n",
-       "  <th>Date:</th>             <td>Mon, 15 Oct 2018</td> <th>  Prob (F-statistic):</th> <td>1.86e-107</td>\n",
+       "  <th>Date:</th>             <td>Thu, 01 Nov 2018</td> <th>  Prob (F-statistic):</th> <td>1.86e-107</td>\n",
        "</tr>\n",
        "<tr>\n",
-       "  <th>Time:</th>                 <td>20:19:20</td>     <th>  Log-Likelihood:    </th> <td> -1107.2</td> \n",
+       "  <th>Time:</th>                 <td>12:19:35</td>     <th>  Log-Likelihood:    </th> <td> -1107.2</td> \n",
        "</tr>\n",
        "<tr>\n",
        "  <th>No. Observations:</th>      <td>   392</td>      <th>  AIC:               </th> <td>   2224.</td> \n",
@@ -257,7 +280,7 @@
        "<tr>\n",
        "  <th>Kurtosis:</th>      <td> 4.322</td> <th>  Cond. No.          </th> <td>    9.59</td>\n",
        "</tr>\n",
-       "</table>"
+       "</table><br/><br/>Warnings:<br/>[1] Standard Errors assume that the covariance matrix of the errors is correctly specified."
       ],
       "text/plain": [
        "<class 'statsmodels.iolib.summary.Summary'>\n",
@@ -267,8 +290,8 @@
        "Dep. Variable:                    mpg   R-squared:                       0.726\n",
        "Model:                            OLS   Adj. R-squared:                  0.723\n",
        "Method:                 Least Squares   F-statistic:                     256.7\n",
-       "Date:                Mon, 15 Oct 2018   Prob (F-statistic):          1.86e-107\n",
-       "Time:                        20:19:20   Log-Likelihood:                -1107.2\n",
+       "Date:                Thu, 01 Nov 2018   Prob (F-statistic):          1.86e-107\n",
+       "Time:                        12:19:35   Log-Likelihood:                -1107.2\n",
        "No. Observations:                 392   AIC:                             2224.\n",
        "Df Residuals:                     387   BIC:                             2244.\n",
        "Df Model:                           4                                         \n",
@@ -293,7 +316,7 @@
        "\"\"\""
       ]
      },
-     "execution_count": 5,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -381,18 +404,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 11,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "/Users/lore.dirick/anaconda3/lib/python3.6/site-packages/statsmodels/compat/pandas.py:56: FutureWarning: The pandas.core.datetools module is deprecated and will be removed in a future version. Please use the pandas.tseries module instead.\n",
-      "  from pandas.core import datetools\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "import statsmodels.api as sm\n",
     "\n",
@@ -449,7 +463,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
@@ -492,11 +506,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [],
    "source": [
-    "#from sklearn.datasets import make_friedman1\n",
+    "from sklearn.datasets import make_friedman1\n",
     "from sklearn.feature_selection import RFE\n",
     "from sklearn.linear_model import LinearRegression\n",
     "\n",
@@ -514,7 +528,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
@@ -523,7 +537,7 @@
        "array([ True,  True, False, False])"
       ]
      },
-     "execution_count": 9,
+     "execution_count": 14,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -541,7 +555,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
@@ -550,7 +564,7 @@
        "array([1, 1, 2, 3])"
       ]
      },
-     "execution_count": 10,
+     "execution_count": 15,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -568,7 +582,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
@@ -576,7 +590,7 @@
      "output_type": "stream",
      "text": [
       "[ 4.77870536 -6.26580459]\n",
-      "21.300812564199767\n"
+      "21.30081256419978\n"
      ]
     }
    ],
@@ -626,7 +640,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.4"
+   "version": "3.6.6"
   }
  },
  "nbformat": 4,
